# bmi

./: .gitignore  README.md  generate.py  variables.f90
models/: AUTHORS  Makefile.am  README  configure.ac
models/c/: Makefile.am  model.c
models/cpp/: Makefile.am  bmi.h  model.cpp
models/fortran/: Makefile.am  model.f90
models/include/: bmi.h  bmi_extensions.h
models/m4/: ax_python.m4
models/python/: Makefile.am  libmodelpython.c  libmodelpython.pyx  setup.py
models/vs2013/: bmi.sln
models/vs2013/model-c/: model-c.vcxproj  model-c.vcxproj.filters
models/vs2013/model-cpp/: model-cpp.vcxproj  model-cpp.vcxproj.filters
models/vs2013/model-fortran/: model-fortran.vfproj
template/: generate.py  get_structure_by_id.f90  get_var.f90  get_var_rank.f90  get_var_shape.f90  get_var_type.f90  inq_compound.f90  inq_compound_field.f90  set_structure_by_id.f90  set_structure_field.f90  structures.f90  subgrid_restart.f90  update_structures.f90
